# nicol-calcium-score

./: .gitignore  CLAUDE.md  README.md  RESULTS.md  about.html  guide.html  index.html  manifest.json  pyproject.toml  requirements.txt  streamlit_app.py  sw.js
.github/workflows/: diagnose.yml  phase0.yml  phase0_v2.yml
.streamlit/: config.toml
config/: config.yaml
congress_signal/: RESULTS.md
congress_signal/config/: config.yaml
congress_signal/src/congress_signal/: cli.py
congress_signal/src/congress_signal/ingest/: committees.py  house_ptr.py  quiver.py
congress_signal/src/congress_signal/scoring/: __init__.py  actor_quality.py
congress_signal/tests/: test_actor_quality.py  test_committees.py  test_monotonicity_hypothesis.py  test_pipeline.py  test_usaspending.py
data/: watchlist.csv
docs/: microcap_phase0_design.md  morning_brief.md  phase0_diagnostic.md  phase0_v2_validation.md  phase0_validation.md
src/congress_signal/: __init__.py  cli.py  dashboard.py  diagnostics.py  mobile.py  ticker_facts.py  validation_v2.py  watchlist_alerts.py
src/congress_signal/ingest/: insider.py  oge.py  quiver.py  senate_efd.py
src/congress_signal/scoring/: actor_skill.py  cluster.py  insider.py  momentum.py  signal.py
src/icarus/: __init__.py  cli.py  config.py  dashboard.py  diagnostics.py  mobile.py  pipeline.py  schema.py  ticker_facts.py  validation.py  watchlist_alerts.py
src/icarus/backtest/: engine.py
src/icarus/filters/: asymmetric.py
src/icarus/ingest/: __init__.py  house_ptr.py  insider.py  oge.py  prices.py  quiver.py  senate_efd.py  synthetic.py  usaspending.py
src/icarus/scoring/: __init__.py  catalyst.py  combined.py  quality.py  residual.py  trade_signal.py
tests/: test_actor_quality.py  test_actor_skill.py  test_catalyst.py  test_clustering.py  test_combined.py  test_committees.py  test_house_ptr.py  test_insider.py  test_momentum.py  test_monotonicity_hypothesis.py  test_pipeline.py  test_quality.py  test_quiver.py  test_residual.py  test_trade_signal.py  test_usaspending.py  test_watchlist_alerts.py
