[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "congress-signal"
version = "0.1.0"
description = "Asymmetric-winner identification from congressional and executive-branch trading disclosures."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "congress-signal contributors" }]
dependencies = [
    "pydantic>=2.5",
    "pandas>=2.0",
    "numpy>=1.24",
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "requests>=2.31",
    "pyarrow>=14.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "hypothesis>=6.100",
]
prices = [
    "yfinance>=0.2.40",
]
pdf = [
    "pdfplumber>=0.10",
]
dashboard = [
    "streamlit>=1.36",
]

[project.scripts]
csig = "congress_signal.cli:main"
csig-dashboard = "congress_signal.dashboard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
congress_signal = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
